--- a/.github/workflows/make-and-sign.yml
+++ b/.github/workflows/make-and-sign.yml
@@ -1,8 +1,9 @@
 name: Release
 on:
-    release:
-        types:
-            - created
+    pull_request:
+        branches: ["main", "master"]
+    # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
 
 jobs:
     publish_on_linux:
