--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     },
     "keywords": [],
     "author": {
-        "name": "Jun Xu",
+        "name": "Jun Xu1",
         "email": "junhaoxu13@hotmail.com"
     },
     "license": "MIT",
